fixed missing dollar signs for plus minus symbol

--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -232,7 +232,7 @@ The selected solar panel that we chose was the Eco Worthy 10W 12V monocrystallin
 		\hline
 		\textbf{Wattage} & 9 watt & 10 watt & 10 watt & 10 watt \\
 		\hline
-		\textbf{Power Tolerance} & \pm10\% & \pm3\% & \pm3\% & \pm5\% \\
+		\textbf{Power Tolerance} & $\pm$10\% & $\pm$3\% & $\pm$3\% & $\pm$5\% \\
 		\hline
 		\textbf{Cost} & \$49 & \$25.99 & \$25.99 & \$35.53 \\
 		\hline
