--- a/Title.tex
+++ b/Title.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
     \begin{center}
-        \section{Auto Garden Bed - Group 9}
+        \section*{Auto Garden Bed - Group 9}
         \begin{Large}
             Team members:\\
             \vspace{.5cm}
