--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -285,40 +285,48 @@ While the model is charging during the day or as a back up, this will be plugged
 \subsubsection{Sensing Subsystem}
 The required sensing subsystem capabilities include:
     \begin{itemize}
-        \item Diffraction Grating or Diffraction Wheel
-        \item Motorized frequency selection mechanism
-        \item SWIR regime Photodiode
+        \item Spectral frequency separation
+        \item Spectral range from 400 to 1700nm
     \end{itemize}
 
     Frequency separation mechanisms under consideration are:
-    
+
 \begin{table}[H]
-\begin{tabularx}{\textwidth}
-    {
-        | >{\raggedright\arraybackslash}X
-        | >{\raggedright\arraybackslash}X
-        | >{\raggedright\arraybackslash}X
-        | >{\raggedright\arraybackslash}X
-        | >{\raggedright\arraybackslash}X
-        | >{\raggedright\arraybackslash}X
-        |
-    }
-	\caption{Infrared Sensors} 
-	\label{table:sensors}\\
+	\centering
+	\label{table:VISsensors}
+	\caption{VIS Sensors}
+	\begin{tabular}{|p{2cm}|l|l|l|l|}
+	\hline    
+	Model & BPX 61 & ODD-5W & FDS100 & PIN-3CD\\
     \hline
-    \textbf{Model} & \textbf{\href{https://www.edmundoptics.com/p/ingaas-detector-70mum-dia-to-46/12571/}{0.07mm Dia., TO-46 Package, InGaAs Photodiode}} & \textbf{\href{https://www.edmundoptics.com/p/ingaas-detector-120mum-dia-to-46/12574/}{0.12mm Dia., TO-46 Package, InGaAs Photodiode}} & \textbf{\href{https://www.thorlabs.com/thorproduct.cfm?partnumber=FGA01}{FGA01 - InGaAs Photodiode}} & \textbf{\href{https://www.thorlabs.com/thorproduct.cfm?partnumber=FGA015}{FGA015 - InGaAs Photodiode}} \\
+	Manufacturer & Newark & Digikey Opto Diode Corp & Thorlabs & Edmund Optics\\
     \hline
-    \textbf{Manu\-facturer} & Edmund Optics & Edmund Optics & ThorLabs & Thorlabs \\
+	Spectral Range (nm) & 400-1100 & 300-1100 & 350-1100 & 350-1100\\
     \hline
-    \textbf{Spectral Response (nm)} & 900 - 1700 & 900 - 1700 & 800 - 1700 & 800 - 1700 \\
+	Active Area (mm sqrd) & 7.02 & 5 & 13 & 3.2\\
     \hline
-    \textbf{Active Area Diameter (mm):} & 0.07 & 0.12 & 0.01 & 0.018 \\
+	Cost (\$) & 13.06 & 14.50 & 16.08 & 34.00\\
     \hline
-    \textbf{Responsivity (A/W)} & 0.9 & 0.9 & 1.003 & 0.95 \\
-    \hline
-    \textbf{Price (\$)} & 88 & 88 & 67.55 & 63 \\
-    \hline
-	\end{tabularx}
+	\end{tabular}
 \end{table}
 
-Diffraction gratings and LED Probes are still being evaluated for necessity:
+
+
+\begin{table}[H]
+	\centering
+	\label{table:NIRsensors}
+	\caption{NIR Sensors}
+	\begin{tabular}{|p{2cm}|l|l|l|l|}
+	\hline    
+	Model & C30617BH & 0800-3111-011 & FGA015 & N/A\\
+	\hline
+	Manufacturer & Digikey Excelitas & Digikey Advanced Photonix & Thorlabs & Edmund Optics\\
+	\hline
+	Spectral Range (nm) & 800-1700 & 800-1700 & 800-1700 & 800-1700\\
+	\hline
+	Active Area (mm sqrd) & 0.1 & 1.36 & 0.018 & 0.12\\
+	\hline
+	Cost (\textdollar) & 43.58 & 50.21 & 63.00 & 88.00 \\
+	\hline
+	\end{tabular}
+\end{table}
