previous works and summary of previous works

--- a/research/previous-work.tex
+++ b/research/previous-work.tex
@@ -27,8 +27,18 @@ Another point of interest in the Automated Rotating Solar Plant Rack is its rota
 
 
 \subsubsection{Stem 'n' Leaf}
+Stem 'n' Leaf\footnote{https://www.ece.ucf.edu/seniordesign/sp2021su2021/g07/} is a UCF Senior Design project. The focus of this project was to be a ``modular hydroponics system'' wherein each plant unit can be fed my a singular control unit. Thus, the ``stem'' is the control unit and the ``leaves'' are the plant units. Their design was focused on modularity and scalability. Hence their design is stackable and tileable design of the bed itself. The key features of this plant bed is that it self-regulates pH and integrates with a mobile application.
 
+The project uses a liquid pH-sensor to obtain the relevant data. Our team wants a similar result but will be trying to achieve this via optical means. Their team mentioned the durability of the sensor which is our team's chief concern seeing as acidic and basic solutions tend to be corrosive and promote oxidation of metals thus the optical approach should improve longevity of the project. 
 \subsubsection{Green Steel Garden}
+Green Steel Garden\footnote{https://www.ece.ucf.edu/seniordesign/su2021fa2021/g11} is another UCF Senior Project that our team is pulling some inspiration from. Another hydroponics system that measures soil nutrients and pH for controlling the parameters of the garden bed. The key feature of this project is the nutrients system and the pH sensor.
 
-\subsubsection{Auto Plant Feed System}
+This project utilizes a water reservoir and reservoirs of chemicals to balance the pH of the water entering the garden bed. They use peristaltic pumps to accomplish the mixture and a combination of pH and electrical conductivity sensors to get data from the water. The current design consensus for our team is that we will be hooked up to hose which is limited by a solenoid valve, but being able to ``treat'' the water that is entering the system may be a design decision that has to be considered.
+\subsubsection{Summary}
+The previous works discussed here highlight the key components of our garden bed: sensing in conjunction with optics. Something of note in these deliberations is the use of hydroponics in all of these projects; something that is rendered unnecessary and seemingly inefficient in an outdoor garden bed.
 
+The previous works related to optics focus on wavelengths outside of our team's consideration (Infrared), instead focusing on UV and visible light through near-Infrared. Their research highlighted potential flaws in some assumptions we had made. Firstly, that it is possible to reduce the moving components of our optical sensing, obtaining a wider field. Secondly, that using IR spectroscopy is practical for getting data from soil as it is used in commercial projects today and shows tremendous value in commercial sectors.
+
+Most of the other garden bed projects focus on hydroponics but something of interesting note is the rotating solar rack project. The control scheme regarding the degrees of rotational freedom and the means of achieving success will be paramount in implementing our own moving solar array. Of interesting note is that all the other garden bed projects focused primarily on hydroponics as it gives greater measures of control to the soil nutrients which had not been a consideration of our team before looking into the previous works. Instituting a chemical pump into our design may be necessary to achieve our goal of being ``set it and forget it'' while still providing updates for when to refill the chemical tanks of integration with the water.
+
+All of the garden projects tried to integrate some means of a mobile app or web user interface. They all mentioned that they needed to have started this component earlier. Each of the mobile application projects were not able to achieve this by their final meeting which is of special concern. Also of note is their choice of stack; many of the projects chose a NoSQL stack which seems counterintuitive given the highly relational nature of the data that is being collected. Our team can learn from this by starting this integration as early as possible and choosing to implement the smallest possible feature set that accomplishes the goals.
