Added Circuit Diagram

--- a/design-details/sensing.tex
+++ b/design-details/sensing.tex
@@ -4,3 +4,9 @@
     \centering
     \includegraphics[width=\textwidth]{images/IRSensorBlockDiagram.png}
 \end{figure}
+
+\begin{figure}[H]
+    \caption{Photodiode Signal Filter}
+    \centering
+    \includegraphics[width=\textwidth]{images/IRSensorBlockDiagram.png}
+\end{figure}
