Fighting with image folder

--- a/design-details/sensing.tex
+++ b/design-details/sensing.tex
@@ -8,5 +8,5 @@
 \begin{figure}[H]
     \caption{Photodiode Signal Filter}
     \centering
-    \includegraphics[width=\textwidth]{Electrical Signal Filtering SD1.png}
+    \includegraphics{ElectricalSignalFilteringSD1.png}
 \end{figure}
