--- a/admin-content/milestones.tex
+++ b/admin-content/milestones.tex
@@ -25,3 +25,17 @@ From a project management perspective, the team will be utilizing Agile to get q
     \item MCU coding complete
     \item Stretch goals
 \end{itemize}
+
+\subsection{Progress}
+
+\subsubsection{Senior Design I}
+\begin{figure}[H]
+    \caption{Cumulative Flow Diagram from Jira}
+    \centering
+    \includegraphics[width=\textwidth]{images/Cumulative flow diagram.png}
+    \label{fig:cumulativeflow}
+\end{figure}
+In Figure \ref{fig:cumulativeflow}: purple designates tasks that are marked unfinished in the the backlog and current sprint, blue represents in progress tasks, and green represents finished tasks.
+
+Throughout Senior Design I we have been gathering research and have started laying out the design of our garden bed and have completed the majority of our part selection. The Figure in \ref{fig:cumulativeflow} may be a little misleading at this point because we have not refined our backlog to fully encapsulate meaningful tasks instead breaking it down into larger subsystem requirement-esque tasks.
+
