Added spectral sensitivity to part selection

--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -343,3 +343,14 @@ From the above, we selected the Newark BPX 61 for our Silicon photodiode and the
 
 Here are the spectral sensitivity curves for each:
 
+\begin{figure}[H]
+    \caption{VIS Photodiode Spectral Sensitivity}
+    \centering
+    \includegraphics[width=\textwidth]{images/NewarkBPX61.png}
+\end{figure}
+
+\begin{figure}[H]
+    \caption{NIR Photodiode Spectral Sensitivity}
+    \centering
+    \includegraphics[width=\textwidth]{images/DigikeyExcilitasNIRSensor.png}
+\end{figure}
