fixed sizes of pictures

--- a/research/previous-work.tex
+++ b/research/previous-work.tex
@@ -18,7 +18,7 @@ That said, there are some reasons why this project differs in application from t
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=\textwidth]{images/3.1.2Pic.png}
+    \includegraphics[width=.6\textwidth]{images/3.1.2Pic.png}
 \end{figure}
 
 In 2021 UCF’s ECE Senior Design Group 1 designed a Chlorophyll Fluorescence Spectrometer. The purpose of this project was to design a system that would detect chlorophyll in plants through stimulation by UV rays. It featured a diffraction grating and a monochromatic CMOS sensor. It is interesting to note that unlike the previously explored project, spatial separation of light frequencies is achieved with a monochromatic camera. This means that each intensity can be mapped to the position on the cmos sensor, and the system can “stare” rather than “scan.” Eliminating moving parts is a major benefit in projects requiring sensitive optical alignment, making this a feature worth seriously considering.
@@ -42,7 +42,7 @@ This project features much of the same core functionality as the Auto Garden bed
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=\textwidth]{images/3.1.4Pic.png}
+    \includegraphics[width=.6\textwidth]{images/3.1.4Pic.png}
 \end{figure}
 
 This is another home garden system with a different target solution. The goal is to facilitate the growth of indoor plants and ensure maximum plant health by rotating the plant base so that the forces driving it to grow sideways cancel out in every direction. Like previous projects, the system is integrated with wireless communication and a schedule selector for different plant types. Unlike previous projects, one of the means of achieving plant health is by protecting sensitive plants from excessive exposure to sunlight, which is a feature that the Auto Garden Bed seeks to implement. 
@@ -55,7 +55,7 @@ Another point of interest in the Automated Rotating Solar Plant Rack is its rota
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=\textwidth]{images/3.1.5Pic.png}
+    \includegraphics[width=.6\textwidth]{images/3.1.5Pic.png}
 \end{figure}
 
 Stem 'n' Leaf\footnote{https://www.ece.ucf.edu/seniordesign/sp2021su2021/g07/} is a UCF Senior Design project. The focus of this project was to be a ``modular hydroponics system'' wherein each plant unit can be fed my a singular control unit. Thus, the ``stem'' is the control unit and the ``leaves'' are the plant units. Their design was focused on modularity and scalability. Hence their design is stackable and tileable design of the bed itself. The key features of this plant bed is that it self-regulates pH and integrates with a mobile application.
