--- a/research/previous-work.tex
+++ b/research/previous-work.tex
@@ -5,7 +5,7 @@
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=\textwidth]{images/3.1.1Pic.png}
+    \includegraphics[width=\textwidth]{images/3-1-1Pic.png}
 \end{figure}
 
 Yuan Cao is a Ph.D. student at MIT with a blog where he posts his unofficial projects. He published a project titled “A \textdollar500 DIY near-IR spectrometer that would sell for \textdollar10,000.” In it, he describes his idea, designs and results for a low cost infrared spectrometer. His design features surprisingly high performance for its price. The system uses an InGaAs photodiode, a reflective diffraction grating, a fiber collimator, some cheap optics, and a microcontroller to create a spectrograph of any light source. It boasts very high signal to noise ratios, 5-6nm spectral resolution, and a price point under \textdollar500. There are definitely some design features worth imitating, specifically the diffraction grating “scanner” that is rotated to pass wavelengths across the surface of the photodiode, as well as the filter circuitry that cleans up the electrical signal. 
@@ -18,7 +18,7 @@ That said, there are some reasons why this project differs in application from t
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=.6\textwidth]{images/3.1.2Pic.png}
+    \includegraphics[width=.6\textwidth]{images/3-1-2Pic.png}
 \end{figure}
 
 In 2021 UCF’s ECE Senior Design Group 1 designed a Chlorophyll Fluorescence Spectrometer. The purpose of this project was to design a system that would detect chlorophyll in plants through stimulation by UV rays. It featured a diffraction grating and a monochromatic CMOS sensor. It is interesting to note that unlike the previously explored project, spatial separation of light frequencies is achieved with a monochromatic camera. This means that each intensity can be mapped to the position on the cmos sensor, and the system can “stare” rather than “scan.” Eliminating moving parts is a major benefit in projects requiring sensitive optical alignment, making this a feature worth seriously considering.
@@ -30,7 +30,7 @@ This project produces a design with similar goals to the Auto Garden Bed, becaus
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=\textwidth]{images/3.1.3Pic.png}
+    \includegraphics[width=\textwidth]{images/3-1-3Pic.png}
 \end{figure}
 
 The Smart Garden Controller was a UCF senior design project with very similar motivations to the Auto Garden Bed. The goal was to create a system that reduced user labor by automating the irrigation schedule of garden areas and reducing waste by sensing moisture levels. The system was also designed to anticipate the informational needs of the gardener and come prepared with a set of popular vegetables and plants, corresponding to variables the team had already investigated to maximize flourishing. It used sensors to detect the health of the plant environment, a microcontroller to facilitate irrigation, and a web API to interface to the user for control of the system. The group also set goals to offer ease of setup, competitive price, and Smart Device integration by integrating with a device like Amazon’s “Alexa.” The last similar design features are wall plug power consumption, lithium ion battery backup power, and http secure information protocol over wifi.
@@ -42,7 +42,7 @@ This project features much of the same core functionality as the Auto Garden bed
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=.6\textwidth]{images/3.1.4Pic.png}
+    \includegraphics[width=.6\textwidth]{images/3-1-4Pic.png}
 \end{figure}
 
 This is another home garden system with a different target solution. The goal is to facilitate the growth of indoor plants and ensure maximum plant health by rotating the plant base so that the forces driving it to grow sideways cancel out in every direction. Like previous projects, the system is integrated with wireless communication and a schedule selector for different plant types. Unlike previous projects, one of the means of achieving plant health is by protecting sensitive plants from excessive exposure to sunlight, which is a feature that the Auto Garden Bed seeks to implement. 
@@ -55,7 +55,7 @@ Another point of interest in the Automated Rotating Solar Plant Rack is its rota
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=.6\textwidth]{images/3.1.5Pic.png}
+    \includegraphics[width=.6\textwidth]{images/3-1-5Pic.png}
 \end{figure}
 
 Stem 'n' Leaf\footnote{https://www.ece.ucf.edu/seniordesign/sp2021su2021/g07/} is a UCF Senior Design project. The focus of this project was to be a ``modular hydroponics system'' wherein each plant unit can be fed my a singular control unit. Thus, the ``stem'' is the control unit and the ``leaves'' are the plant units. Their design was focused on modularity and scalability. Hence their design is stackable and tileable design of the bed itself. The key features of this plant bed is that it self-regulates pH and integrates with a mobile application.
@@ -67,7 +67,7 @@ The project uses a liquid pH-sensor to obtain the relevant data. Our team wants 
 \begin{figure}[H]
     \caption{NIR Photodiode Spectral Sensitivity}
     \centering
-    \includegraphics[width=\textwidth]{images/3.1.6Pic.png}
+    \includegraphics[width=\textwidth]{images/3-1-6Pic.png}
 \end{figure}
 
 Green Steel Garden\footnote{https://www.ece.ucf.edu/seniordesign/su2021fa2021/g11} is another UCF Senior Project that our team is pulling some inspiration from. Another hydroponics system that measures soil nutrients and pH for controlling the parameters of the garden bed. The key feature of this project is the nutrients system and the pH sensor.
