Sprinkled text in some places where Wei said we needed descriptions.

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -33,14 +33,17 @@ After assembling the list of requirements, the team set out to create a high-lev
 The ultimate novelty in this project is all of the sensing that will be done through spectroscopy. The team has found a plethora of research on the topic and has started familiarizing themselves with the limitations and capabilities of the available technology. Ideally, the team would like to find a scalable solution to the sensing in which the optical sensing could be attached to a drone or satellite to survey fields for farming.
 \newpage
 \section{Project Description}                   % Section 2
+TBD, DESCRIPTION NEEDED HERE.
 \input{project-description/project-bg.tex}      % Section 2.1
 \input{project-description/Goals-and-Objectives.tex}      % Section 2.2
 \input{project-description/requirements.tex}    % Section 2.3 - needs work, expanding requirements, better house of quality
 \section{Research}                              % Section 3
+TBD, DESCRIPTION NEEDED HERE.
 \input{research/previous-work.tex}              % Section 3.1
 \input{research/technology.tex}                 % Section 3.2
 \input{research/part-selection.tex}             % Section 3.3 - add information on pros and cons, some real engineering analysis
 \section{Design Constraints}                    % Section 4
+TBD, DESCRIPTION NEEDED HERE.
 \input{design-constraints/standards.tex}        % Section 4.1 - what standards do we have to adhere to?
 \input{design-constraints/realistic-constraints.tex} % Section 4.2-4.9 - what concerns are in the project?
 \section{System Hardware and Software Design}   % Section 5 - how each section is going to work
