--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -1,4 +1,5 @@
 \subsection{Part Selection}
+TBD, DESCRIPTION NEEDED HERE.
 \subsubsection{Controller Subsystem}
 \begin{flushleft}
 	At minimum, any chosen microcontrollers (MCUs) shall support natively, or by addition of a
