--- a/research/technology.tex
+++ b/research/technology.tex
@@ -1,5 +1,5 @@
 \subsection{Related Technologies}
-
+TBD, DESCRIPTION NEEDED HERE.
 \subsubsection{Ocean insight: Ocean ST NIR Microspectrometer}
 
 \begin{figure}[H]
